Load and solve a .lp file.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -18,7 +18,15 @@ IF(WIN32)
 	SET(TARGET_ARCHITECTURE "x86")
 ENDIF()
 
+if(APPLE)
+	set(CMAKE_MACOSX_RPATH 1)
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+	set(CMAKE_XCODE_ATTRIBUTE_GCC_VERSION "com.apple.compilers.llvm.clang.1_0")
+endif()
+
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
+INCLUDE_DIRECTORIES("${GUROBI_INCLUDE_DIRS}")
 
 ADD_SUBDIRECTORY(common)
 ADD_SUBDIRECTORY(algorithms)
