--- a/source/algorithms/gomory/CMakeLists.txt
+++ b/source/algorithms/gomory/CMakeLists.txt
@@ -12,4 +12,4 @@ ELSE()
 	ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE_FILES})
 ENDIF()
 
-TARGET_LINK_LIBRARIES(${EXECUTABLE} Common)
+TARGET_LINK_LIBRARIES(${EXECUTABLE} Common ${GUROBI_LIBRARIES})
