Fixed some CMake stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ PROJECT(gomory)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
-SET(GUROBI_ENABLE TRUE)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 FIND_PACKAGE(GUROBI)
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
@@ -18,8 +18,6 @@ FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
 ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
 INCLUDE_DIRECTORIES("libraries/rapidjson/include")
-INCLUDE_DIRECTORIES(${GUROBI_INCLUDE_DIRS})
-#LINK_DIRECTORIES(${GUROBI_LIBRARIES})
-#LIST(APPEND LIBS ${GUROBI_LIBRARIES})
+INCLUDE_DIRECTORIES("${GUROBI_INCLUDE_DIR}")
 
 ADD_SUBDIRECTORY(source)
