--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libraries/rapidjson"]
 	path = libraries/rapidjson
 	url = git@github.com:miloyip/rapidjson.git
+[submodule "libraries/eigen"]
+	path = libraries/eigen
+	url = https://github.com/RLovelett/eigen.git
