--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
 ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
 INCLUDE_DIRECTORIES("libraries/rapidjson/include")
+INCLUDE_DIRECTORIES("libraries/eigen/Eigen/")
 INCLUDE_DIRECTORIES("${GUROBI_INCLUDE_DIR}")
 
 ADD_SUBDIRECTORY(source)
