--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+set(CMAKE_CXX_STANDARD 14)
+
 FIND_PACKAGE(GUROBI)
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
@@ -18,7 +20,7 @@ FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
 ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
 INCLUDE_DIRECTORIES("libraries/rapidjson/include")
-INCLUDE_DIRECTORIES("libraries/eigen/Eigen/")
+INCLUDE_DIRECTORIES("libraries/eigen/")
 INCLUDE_DIRECTORIES("${GUROBI_INCLUDE_DIR}")
 
 ADD_SUBDIRECTORY(source)
