Correcting the addition of Eigen via submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:miloyip/rapidjson.git
 [submodule "libraries/eigen"]
 	path = libraries/eigen
-	url = https://github.com/RLovelett/eigen.git
+	url = git@github.com:RLovelett/eigen.git
