Giving the lexicographic simplex method another try.

--- a/source/algorithms/CMakeLists.txt
+++ b/source/algorithms/CMakeLists.txt
@@ -1,5 +1,7 @@
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 ADD_EXECUTABLE("gurobi" "gurobi.cpp")
 TARGET_LINK_LIBRARIES("gurobi" Common ${GUROBI_LIBRARIES})
-ADD_EXECUTABLE("gomory_naive" "gomory_naive.cpp")
-TARGET_LINK_LIBRARIES("gomory_naive" Common ${GUROBI_LIBRARIES})
+ADD_EXECUTABLE("gmi_naive" "gmi_naive.cpp" "gomory_naive.cpp")
+TARGET_LINK_LIBRARIES("gmi_naive" Common ${GUROBI_LIBRARIES})
+ADD_EXECUTABLE("gmi_lex" "gmi_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
+TARGET_LINK_LIBRARIES("gmi_lex" Common ${GUROBI_LIBRARIES})
