adding gomory rounds and gomory rounds lex

--- a/source/algorithms/CMakeLists.txt
+++ b/source/algorithms/CMakeLists.txt
@@ -5,5 +5,7 @@ ADD_EXECUTABLE("gmi_naive" "gmi_naive.cpp" "gomory_naive.cpp")
 TARGET_LINK_LIBRARIES("gmi_naive" Common ${GUROBI_LIBRARIES})
 ADD_EXECUTABLE("gmi_lex" "gmi_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
 TARGET_LINK_LIBRARIES("gmi_lex" Common ${GUROBI_LIBRARIES})
-#ADD_EXECUTABLE("gmi_rounds" "gmi_rounds.cpp" "gomory_rounds.cpp" "gomory_naive.cpp")
-#TARGET_LINK_LIBRARIES("gmi_rounds" Common ${GUROBI_LIBRARIES})
+ADD_EXECUTABLE("gmi_rounds" "gmi_rounds.cpp" "gomory_rounds.cpp" "gomory_naive.cpp")
+TARGET_LINK_LIBRARIES("gmi_rounds" Common ${GUROBI_LIBRARIES})
+ADD_EXECUTABLE("gmi_rounds_lex" "gmi_rounds_lex.cpp" "gomory_rounds_lex.cpp" "gomory_naive.cpp")
+TARGET_LINK_LIBRARIES("gmi_rounds_lex" Common ${GUROBI_LIBRARIES})
