--- a/source/algorithms/CMakeLists.txt
+++ b/source/algorithms/CMakeLists.txt
@@ -3,11 +3,11 @@ ADD_EXECUTABLE("gurobi" "gurobi.cpp")
 TARGET_LINK_LIBRARIES("gurobi" Common ${GUROBI_LIBRARIES})
 ADD_EXECUTABLE("gmi" "gmi.cpp" "gomory.cpp")
 TARGET_LINK_LIBRARIES("gmi" Common ${GUROBI_LIBRARIES})
-ADD_EXECUTABLE("gmi_naive" "gmi_naive.cpp" "gomory_naive.cpp")
-TARGET_LINK_LIBRARIES("gmi_naive" Common ${GUROBI_LIBRARIES})
-ADD_EXECUTABLE("gmi_lex" "gmi_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
-TARGET_LINK_LIBRARIES("gmi_lex" Common ${GUROBI_LIBRARIES})
-ADD_EXECUTABLE("gmi_rounds" "gmi_rounds.cpp" "gomory_rounds.cpp" "gomory_naive.cpp")
-TARGET_LINK_LIBRARIES("gmi_rounds" Common ${GUROBI_LIBRARIES})
-ADD_EXECUTABLE("gmi_rounds_lex" "gmi_rounds_lex.cpp" "gomory_rounds_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
-TARGET_LINK_LIBRARIES("gmi_rounds_lex" Common ${GUROBI_LIBRARIES})
+#ADD_EXECUTABLE("gmi_naive" "gmi_naive.cpp" "gomory_naive.cpp")
+#TARGET_LINK_LIBRARIES("gmi_naive" Common ${GUROBI_LIBRARIES})
+#ADD_EXECUTABLE("gmi_lex" "gmi_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
+#TARGET_LINK_LIBRARIES("gmi_lex" Common ${GUROBI_LIBRARIES})
+#ADD_EXECUTABLE("gmi_rounds" "gmi_rounds.cpp" "gomory_rounds.cpp" "gomory_naive.cpp")
+#TARGET_LINK_LIBRARIES("gmi_rounds" Common ${GUROBI_LIBRARIES})
+#ADD_EXECUTABLE("gmi_rounds_lex" "gmi_rounds_lex.cpp" "gomory_rounds_lex.cpp" "gomory_lex.cpp" "gomory_naive.cpp")
+#TARGET_LINK_LIBRARIES("gmi_rounds_lex" Common ${GUROBI_LIBRARIES})
