Added a CMake method to compile SoPlex with the rest of the project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 PROJECT(gomory)
-CMAKE_MINIMUM_REQUIRED(VERSION 3.02)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
+include(ExternalProject)
+
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -16,6 +18,21 @@ FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
 	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
 	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
 ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
+
+set(SOPLEX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libraries/soplex")
+
+if(SOPLEX_DIR)
+	set(SOPLEX_FOUND TRUE)
+	ExternalProject_Add(
+		soplex
+		SOURCE_DIR "${SOPLEX_DIR}"
+		CONFIGURE_COMMAND ""
+		INSTALL_COMMAND ""
+		BUILD_IN_SOURCE 1
+		BUILD_COMMAND "make")
+else()
+	set(SOPLEX_FOUND FALSE)
+endif()
 
 INCLUDE_DIRECTORIES("libraries/rapidjson/include")
 INCLUDE_DIRECTORIES("libraries/eigen/")
