Small changes in preparation of SoPlex implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ if(SOPLEX_DIR)
 		INSTALL_COMMAND ""
 		BUILD_IN_SOURCE 1
 		BUILD_COMMAND "make")
+	INCLUDE_DIRECTORIES("${SOPLEX_DIR}/src")
 else()
 	set(SOPLEX_FOUND FALSE)
 endif()
