--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,20 +19,20 @@ FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
 	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
 ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
-set(SOPLEX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libraries/soplex")
+set(QSOPT_EX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libraries/qsopt-ex")
 
-if(SOPLEX_DIR)
-	set(SOPLEX_FOUND TRUE)
+if(QSOPT_EX_DIR)
+	set(QSOPT_EX_FOUND TRUE)
 	ExternalProject_Add(
-		soplex
-		SOURCE_DIR "${SOPLEX_DIR}"
+		qsopt-ex
+		SOURCE_DIR "${QSOPT_EX_DIR}"
 		CONFIGURE_COMMAND ""
 		INSTALL_COMMAND ""
 		BUILD_IN_SOURCE 1
 		BUILD_COMMAND "make")
-	INCLUDE_DIRECTORIES("${SOPLEX_DIR}/src")
+	INCLUDE_DIRECTORIES("${QSOPT_EX_DIR}/src")
 else()
-	set(SOPLEX_FOUND FALSE)
+	set(QSOPT_EX_FOUND FALSE)
 endif()
 
 INCLUDE_DIRECTORIES("libraries/rapidjson/include")
