--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -4,3 +4,4 @@ SET(HEADER_FILES base_model.h document.h error.h file.h)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 ADD_LIBRARY(Common STATIC ${SOURCE_FILES} ${HEADER_FILES})
+TARGET_LINK_LIBRARIES(Common ${QSOPT_LIB})
